# Surgical_Safety_crew

./: README.md  pyproject.toml
src/surgical_safety_monitoring_crew/: crew.py  main.py
src/surgical_safety_monitoring_crew/config/: agents.yaml  tasks.yaml
src/surgical_safety_monitoring_crew/tools/: surgical_object_detection_api.py
