[project]
name = "surgical_safety_monitoring_crew"
version = "0.1.0"
description = "surgical_safety_monitoring_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.150.0,<1.0.0"
]

[project.scripts]
surgical_safety_monitoring_crew = "surgical_safety_monitoring_crew.main:run"
run_crew = "surgical_safety_monitoring_crew.main:run"
train = "surgical_safety_monitoring_crew.main:train"
replay = "surgical_safety_monitoring_crew.main:replay"
test = "surgical_safety_monitoring_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
